--- a/src/src/i18n/de.json
+++ b/src/src/i18n/de.json
@@ -1,3 +1,6 @@
 {
-
+  "ioBroker Welcome page": "ioBroker-Willkommensseite",
+  "Open": "Offen",
+  "Open in new tab": "In neuem Tab öffnen",
+  "ra_Change color theme": "Farbthema ändern"
 }
