--- a/src/src/i18n/en.json
+++ b/src/src/i18n/en.json
@@ -1,3 +1,6 @@
 {
-
+  "ra_Change color theme": "Change color theme",
+  "ioBroker Welcome page": "ioBroker Welcome page",
+  "Open": "Open",
+  "Open in new tab": "Open in new tab"
 }
