--- a/src/src/i18n/es.json
+++ b/src/src/i18n/es.json
@@ -1,3 +1,6 @@
 {
-
+  "ioBroker Welcome page": "Página de bienvenida de ioBroker",
+  "Open": "Abierto",
+  "Open in new tab": "Abrir en una pestaña nueva",
+  "ra_Change color theme": "Cambiar tema de color"
 }
