--- a/src/src/i18n/fr.json
+++ b/src/src/i18n/fr.json
@@ -1,3 +1,6 @@
 {
-
+  "ioBroker Welcome page": "Page d'accueil d'ioBroker",
+  "Open": "Ouvrir",
+  "Open in new tab": "Ouvrir dans un nouvel onglet",
+  "ra_Change color theme": "Changer le thème de couleur"
 }
