--- a/src/src/i18n/it.json
+++ b/src/src/i18n/it.json
@@ -1,3 +1,6 @@
 {
-
+  "ioBroker Welcome page": "Pagina di benvenuto di ioBroker",
+  "Open": "Aprire",
+  "Open in new tab": "Apri in una nuova scheda",
+  "ra_Change color theme": "Cambia tema colore"
 }
