--- a/src/src/i18n/nl.json
+++ b/src/src/i18n/nl.json
@@ -1,3 +1,6 @@
 {
-
+  "ioBroker Welcome page": "ioBroker-welkomstpagina",
+  "Open": "Open",
+  "Open in new tab": "Openen in nieuw tabblad",
+  "ra_Change color theme": "Verander het kleurthema"
 }
