--- a/src/src/i18n/pl.json
+++ b/src/src/i18n/pl.json
@@ -1,3 +1,6 @@
 {
-
+  "ioBroker Welcome page": "Strona powitalna ioBrokera",
+  "Open": "otwarty",
+  "Open in new tab": "Otwórz w nowej karcie",
+  "ra_Change color theme": "Zmień motyw kolorów"
 }
