--- a/src/src/i18n/pt.json
+++ b/src/src/i18n/pt.json
@@ -1,3 +1,6 @@
 {
-
+  "ioBroker Welcome page": "Página de boas-vindas do ioBroker",
+  "Open": "Abrir",
+  "Open in new tab": "Abrir em nova aba",
+  "ra_Change color theme": "Alterar tema de cor"
 }
