--- a/src/src/i18n/uk.json
+++ b/src/src/i18n/uk.json
@@ -1,3 +1,6 @@
 {
-
+  "ioBroker Welcome page": "Вітальна сторінка ioBroker",
+  "Open": "ВІДЧИНЕНО",
+  "Open in new tab": "Відкрити в новій вкладці",
+  "ra_Change color theme": "Змінити кольорову тему"
 }
