--- a/src/src/i18n/zh-cn.json
+++ b/src/src/i18n/zh-cn.json
@@ -1,3 +1,6 @@
 {
-
+  "ioBroker Welcome page": "ioBroker 欢迎页面",
+  "Open": "打开",
+  "Open in new tab": "在新选项卡中打开",
+  "ra_Change color theme": "更改颜色主题"
 }
