--- a/src/src/i18n/ru.json
+++ b/src/src/i18n/ru.json
@@ -1,3 +1,6 @@
 {
-
+  "ioBroker Welcome page": "Приветственная страница ioBroker",
+  "Open": "Открыть",
+  "Open in new tab": "Открыть в новой вкладке",
+  "ra_Change color theme": "Изменить цветовую тему"
 }
