--- a/admin/i18n/it.json
+++ b/admin/i18n/it.json
@@ -7,5 +7,9 @@
   "Own IP address": "Proprio indirizzo IP",
   "Secure(HTTPS)": "Sicuro (HTTPS)",
   "Retry Interval": "Intervallo tra tentativi",
-  "Adapter will retry every X seconds to open the web server on the given port": "L'adattatore riproverà ogni X secondi ad aprire il server Web sulla porta specificata"
+  "Adapter will retry every X seconds to open the web server on the given port": "L'adattatore riproverà ogni X secondi ad aprire il server Web sulla porta specificata",
+  "Redirect to custom link": "Reindirizzamento al collegamento personalizzato",
+  "Custom URL": "URL personalizzato",
+  "User will be immediately redirected to this link after opening of the page": "L'utente verrà immediatamente reindirizzato a questo collegamento dopo l'apertura della pagina",
+  "URL must be set": "L'URL deve essere impostato"
 }
