--- a/admin/i18n/es.json
+++ b/admin/i18n/es.json
@@ -7,5 +7,9 @@
   "Own IP address": "Dirección IP propia",
   "Secure(HTTPS)": "Seguro (HTTPS)",
   "Retry Interval": "Intervalo de reintento",
-  "Adapter will retry every X seconds to open the web server on the given port": "El adaptador volverá a intentar cada X segundos abrir el servidor web en el puerto indicado"
+  "Adapter will retry every X seconds to open the web server on the given port": "El adaptador volverá a intentar cada X segundos abrir el servidor web en el puerto indicado",
+  "Redirect to custom link": "Redirigir a enlace personalizado",
+  "Custom URL": "URL personalizada",
+  "User will be immediately redirected to this link after opening of the page": "El usuario será redirigido inmediatamente a este enlace después de abrir la página.",
+  "URL must be set": "Se debe configurar la URL"
 }
