--- a/admin/i18n/pt.json
+++ b/admin/i18n/pt.json
@@ -7,5 +7,9 @@
   "Own IP address": "Endereço IP próprio",
   "Secure(HTTPS)": "Seguro (HTTPS)",
   "Retry Interval": "Intervalo de repetição",
-  "Adapter will retry every X seconds to open the web server on the given port": "O adaptador tentará novamente a cada X segundos abrir o servidor web na porta especificada"
+  "Adapter will retry every X seconds to open the web server on the given port": "O adaptador tentará novamente a cada X segundos abrir o servidor web na porta especificada",
+  "Redirect to custom link": "Redirecionar para link personalizado",
+  "Custom URL": "URL personalizado",
+  "User will be immediately redirected to this link after opening of the page": "O usuário será imediatamente redirecionado para este link após a abertura da página",
+  "URL must be set": "O URL deve ser definido"
 }
