--- a/admin/i18n/nl.json
+++ b/admin/i18n/nl.json
@@ -11,5 +11,6 @@
   "Redirect to custom link": "Omleiden naar aangepaste link",
   "Custom URL": "Eigen URL",
   "User will be immediately redirected to this link after opening of the page": "De gebruiker wordt na het openen van de pagina onmiddellijk doorverwezen naar deze link",
-  "URL must be set": "URL moet worden ingesteld"
+  "URL must be set": "URL moet worden ingesteld",
+  "Logo": "Logo afbeelding"
 }
